// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with 1 items number 1`] = `
<DocumentFragment>
  <div
    class="basket-icon sticky"
  >
    <button
      class="pointer"
      role="link"
    >
      <img
        alt="open basket"
        src="/images/shopping-cart-3.svg"
      />
    </button>
    <span
      class="inBasket"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;

exports[`render renders with no items number 1`] = `
<DocumentFragment>
  <div
    class="basket-icon sticky"
  >
    <button
      class="no-pointer"
      disabled=""
      role="link"
    >
      <img
        alt="open basket"
        src="/images/shopping-cart-3.svg"
      />
    </button>
  </div>
</DocumentFragment>
`;
